notification service finished